--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<p>Welcome to my website</p>
-<h1 th:text="${message}">error</h1>
+<h1>FYP Backend</h1>
+<h2 th:text="${message}">error</h2>
 </body>
 </html>
